@@ -1,3 +1,8 @@
+ * All GET requests against an ACMEv2 endpoint (except directory and nonce retrievals), are
+   now made as POST with an empty, JWS signed body. See 
+   <https://community.letsencrypt.org/t/acme-v2-scheduled-deprecation-of-unauthenticated-resource-gets/74380>
+   for the necessity of this API change at LetsEncrypt.
+
 v2.0.3
 ----------------------------------------------------------------------------------------------------
  * Fixed an integer overrun for renewal window configuration on 32bit systems that caused
